Bug 474542 - With a large window, clicking multiple apps on Discover's home page pushes each one as a new column
Summary: With a large window, clicking multiple apps on Discover's home page pushes ea...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-09-15 10:35 UTC by Patrick Silva
Modified: 2023-09-26 15:25 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (652.94 KB, video/webm)
2023-09-15 10:35 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-09-15 10:35:27 UTC
Created attachment 161631 [details]
screen recording

STEPS TO REPRODUCE
1. open Discover
2. click on any app
3. click on another app

OBSERVED RESULT
the description pages of the clicked apps opened next to each other. Please watch the attached screen recording.

EXPECTED RESULT
the observed result should not occur

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-09-15 17:34:55 UTC
Can confirm. If you keep clicking on apps, it pushes more pages!

Might be caused by recent ColumnView changes. CCing some folks.
Comment 2 Marco Martin 2023-09-26 15:25:32 UTC
Git commit c871893587f71aff9b0c8b26c26e5754fd09e251 by Marco Martin.
Committed on 26/09/2023 at 17:25.
Pushed by mart into branch 'master'.

Restore push behavior, unbreak existing apps

The behavior of PageRow is alike a browser history of undo stack: the
top of the stack is considered the page the app is currently in, rather
than the total depth.
This logic broke in the refactor, causing many apps like multi level
KCMS or discover to do double pushes keeping creating new pages in the
row.
this does the minimal indexes fix to make the existing users behave
correctly.

M  +37   -4    autotests/tst_pagerow.qml
M  +4    -1    src/columnview.cpp
M  +5    -3    src/controls/PageRow.qml

https://invent.kde.org/frameworks/kirigami/-/commit/c871893587f71aff9b0c8b26c26e5754fd09e251